[tool.poetry]
name = "first-website"
version = "0.1.0"
description = ""
authors = ["Fobos <95380054+Yastrah@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
