[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Fobos <95380054+Yastrah@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
